--- a/BayesBinMix_models_new.qmd
+++ b/BayesBinMix_models_new.qmd
@@ -248,6 +248,9 @@ classificationprobs_15$maxProb2<-maxProb2
 classificationprobs_15$temp<-ClusterAssignment_new
 
 
+#Output probabilities
+classificationprobs_15 %>% filter(ClusterAssignment_ecr == 2) %>% select(ClusterAssignment_ecr, temp, maxProb, maxProb2)
+
 #2nd highest probs for cluster2
 classificationprobs_15<-classificationprobs_15 %>% mutate(ClusterAssignment_newd = ifelse(ClusterAssignment_ecr == 2,  temp,ClusterAssignment_ecr), probassign = ifelse( ClusterAssignment_ecr == 2,maxProb2,maxProb))
 
@@ -305,8 +308,9 @@ table1(~ Two_or_more_rooms_2015_P + Lackplumbing_2015 + medianincome_2015 + Bach
 
 lang15<-langdist15_wide
 merged15<- merge(merged15,lang15,by = "GEOID")
+merged15<-merged15 %>% select(-NAME.y) %>%rename(NAME = NAME.x)
 
-table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment, data = merged15, overall=F)
+table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment_new, data = merged15, overall=F)
 ```
 
 #### Distribution of assignment probabilities to the most probable cluster
@@ -385,6 +389,8 @@ classificationprobs_19$ClusterAssignment_ecr<-res_acs19$clusterMembershipPerMeth
 classificationprobs_19$temp<-ClusterAssignment_new 
 
 
+#Output probabilities
+classificationprobs_19 %>% filter(ClusterAssignment_ecr == 5) %>% select(ClusterAssignment_ecr, temp, maxProb, maxProb2)
 
 #2nd highest probs for cluster 5
 classificationprobs_19<-classificationprobs_19 %>% mutate(ClusterAssignment_newd= ifelse(ClusterAssignment_ecr == 5,  temp,ClusterAssignment_ecr), probassign = ifelse( ClusterAssignment_ecr == 5,maxProb2,maxProb))
@@ -515,7 +521,7 @@ temp<-get_acs(state = "MA", geography = "tract",
                    variables = "DP05_0065", year = 2015, geometry = TRUE, cache_table = TRUE)
 
 temp1<- temp %>% select(GEOID, NAME, geometry, estimate)
-dat15map<-merged15 %>% select(GEOID,NAME.x, ClusterAssignment_new, probassign) %>% rename(NAME = NAME.x)
+dat15map<-merged15 %>% select(GEOID,NAME, ClusterAssignment_new, probassign) 
 
 #join datasets
 map15<- merge(temp1, dat15map, by = "GEOID")
@@ -619,11 +625,39 @@ table(dat19$ClusterAssignment)
 
 #table(acs15= merged15$ClusterAssignment, acs19= merged19$ClusterAssignment)
 
-load("./bayesbinmix_clustered_tracts.RData")
+#load("./bayesbinmix_clustered_tracts.RData")
 
-table(dat10$cluster_color, dat15$cluster_color)
+table(acs15=dat15$cluster_color, acs10=dat10$cluster_color)
+table(acs10=dat10$cluster_color, acs19=dat19$cluster_color)
+table(acs15=dat15$cluster_color, acs19=dat19$cluster_color)
+
+#We are going to use 2006-2010 as the reference clusters, that is i am looking at concondance between 2010-> 2015 and 2010->2019
+
+dat10_1<- dat10[, c("GEOID", "cluster_color")]
+dat10_1 <- dat10_1 %>% rename(cluster_color_10= cluster_color)
+dat1015<-merge(dat15[, c("GEOID", "cluster_color")], dat10_1, by= "GEOID")
+
+dat1015$cluster_color_15<- ifelse(dat1015$cluster_color_10 %in% dat1015$cluster_color, dat1015$cluster_color_10, dat1015$cluster_color)
+
+dat1015$cluster_color_15<-factor(dat1015$cluster_color_15,levels = 1:8, labels= c("red", "blue","green","purple","orange","yellow", "brown","pink"))
 
 
+check<-dat1015 %>% filter(cluster_color_10 %in% cluster_color) %>% select(cluster_color_10, cluster_color,cluster_color_15)
+
+table1::table1( ~ cluster_color_10|cluster_color, data = dat1015)
+
+
+dat1015$cluster_col15<- factor(dat1015$cluster_color, levels = dat1015[order(dat1015$cluster_color_10), "cluster_color"])
+levels(dat1015$cluster_col15)
+
+
+
+
+#Identify concordant observations: Determine which observations have the same labels in both variables despite having different distributions. You can achieve this by comparing the two variables.
+
+#Create a new variable: Once you have identified the concordant observations, create a new variable that matches the labeling based on one of the variables.
+
+dat1015 %>% filter(cluster_color == "red") %>% select(GEOID, cluster_color, cluster_color_10)
 
 
 ```
