--- a/BayesBinMix_models_latest.qmd
+++ b/BayesBinMix_models_latest.qmd
@@ -32,15 +32,20 @@ censusdata_bin <- readRDS("./censusdata_bin_raceeth_033024.rds")
 agedist<-load("./census_age_dist.RData")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
-#These models
-res_all<-readRDS("./ACSall_3.29.24.rds")
-res_acs10<-res_all$res_acs10_50
-res_acs15<-res_all$res_acs15_50
-res_acs19<-res_all$res_acs19_50
+#Output from heating vector tuning-- 4/14/24
+res_all<-readRDS("./tuningheatsvec_4.14.24.rds")
+#It seems that heating vector with deltaT = 0.01 worked well for all datasets-- swap acceptance rates ranged from 54-56.8%
+#deltaT2: 22.2%, 25.7%, 22.7
+
+res_acs10<-res_all[[1]][["res_acs10_deltatemp2"]]
+res_acs15<-res_all[[1]][["res_acs15_deltatemp2"]]
+res_acs19<-res_all[[1]][["res_acs19_deltatemp2"]]
 ```
 
 ```{r}
 #| eval = false
+
+#These results look much better!
 print(res_acs10)
 print(res_acs15)
 print(res_acs19)
@@ -53,21 +58,23 @@ print(res_acs19)
 source("plots.R")
 #source("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/plots.R")
 library(viridis)
-sesvars<-c("Two People Per Room","Lack of complete Plumbing", "Median Household Income", ">= Bacherlor's Degree", "Below Poverty Line", "< High School",
-           "Female Household", ">= High School","No Vehicle","Owner", "Renter", "Unemployment","White Collar Occupation", "SNAP Benefits")
+#Need to be in order
+#names(censusdata_bin$acs5_2010_bin)
+sesvars<-c("Median income", "Female household", "< HS", " >= HS", " >= Bacherlors", "Limited EN Proficiency", "Unemployment", "SNAP benefits", "Owner-occupied", "Renter-occupied", 
+           "No vehicle", "Hispanic or Latino", "NH Black", "NH Asian", "Crowded housing", "Below 150% poverty", "Working class", "Lack complete plumbing")
 
 
 # Other color options
-viridis_palette <- viridis(14)
+viridis_palette <- viridis(18)
 custom_colors <- c("#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", 
                    "#8c564b", "#e377c2", "#7f7f7f", "#bcbd22", "#17becf",
                    "#ff0000", "#00ff00", "#0000ff", "#ffff00")
 
-group_cols<-c("#1f77b4","#2ca02c","salmon1", "#bcbd22")
+group_cols<-c("#1f77b4","#2ca02c","salmon1", "#bcbd22", "#e377c2")
 
 
 # Generate 14 pastel colors for ungrouped graph
-pastel_palette1 <- generate_pastel_colors(14)
+pastel_palette1 <- generate_pastel_colors(18)
 ```
 
 ```{r}
@@ -108,7 +115,7 @@ p_10_heatmap
 stats<-cbind(summary(res_acs10$parameters.ecr.mcmc)$statistics[,c(1,2)], 
              summary(res_acs10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
-tail(round(stats, 2), mapK) %>% kable()
+tail(round(stats, 4), mapK) %>% kable()
 ```
 
 ```{r}
@@ -137,9 +144,9 @@ second_highest_index<-function(vec){
 #For ACS 2010 and mapK = 9
 mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
 classificationprobs_10<-res_acs10$classificationProbabilities.ecr
+ClusterAssignment<-res_acs10$clusterMembershipPerMethod[,2]
 # Add cluster classification based on maximum probability 
 maxProb<-apply(classificationprobs_10, 1, max)
-ClusterAssignment<-res_acs10$clusterMembershipPerMethod[,1]
 ClusterAssignment_ecr_temp<-apply(classificationprobs_10,1, highest_index)
 
 
@@ -147,15 +154,16 @@ classificationprobs_10$ClusterAssignment<-ClusterAssignment
 classificationprobs_10$maxProb<-maxProb
 classificationprobs_10$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
 
-#head(classificationprobs_10)
+#12 census tracts that are not classified based on highest prob
 table(classificationprobs_10$ClusterAssignment,classificationprobs_10$ClusterAssignment_ecr_temp)
-classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp != ClusterAssignment)
-##This is odd-- my understanding is that these algorithms assigned observations to clusters probabilistically based on the highest posterior probabilities of cluster assignments given the observed data.
 
-#Permutation that is consistent across MCMC samples?
+classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp == ClusterAssignment)
+##This is odd-- my understanding is that these algorithms assigned observations to clusters probabilistically based on the highest posterior probabilities of cluster assignments given the observed data-- it seems like a rounding issue because it makes the correct assignment when none of the probabilities have similar/same leading number.
 
 #Prep Data
 classificationprobs_10$GEOID<-row.names(censusdata_bin$acs5_2010_bin)
+
+####Find census tracts that are missclassified
 fuzzygeoids_10<-classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
 
 
@@ -163,12 +171,10 @@ classificationprobs_10$ClusterAssignment<- factor(classificationprobs_10$Cluster
 
 dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment, maxProb)
 
-racedist_10<-acs5_2010_wide %>% select(GEOID, Hispanic_or_Latino_2010,NonHispanicWhite_2010, NonHispanicBlack_2010, NonHispanicAsian_2010, NH_two_or_more_races_2010)
-
 #merge age dist + race dist with cluster information-- these are proportions
 merged10<- merge(dat10_clusters, agedist10_wide, by = "GEOID")
-merged10<-merge(merged10, racedist_10, by = "GEOID")
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more + Hispanic_or_Latino_2010 + NonHispanicWhite_2010 + NonHispanicBlack_2010 + NonHispanicAsian_2010+ NH_two_or_more_races_2010  |ClusterAssignment, data= merged10, overall = F)
+
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment, data= merged10, overall = F)
 
 #Distrubution of SES variables by cluster
 acs10bin<-censusdata_bin$acs5_2010_bin
@@ -178,18 +184,7 @@ acs10bin$ClusterAssignment<-ClusterAssignment
 acs10bin$ClusterAssignment<- factor(acs10bin$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
 
-table1(~ Two_or_more_rooms_2010_P + Lackplumbing_2010 + medianincome_2010 + BachelorHigherP_2010 + BelowPovertyLineP_2010 +  Education9years_2010 +     Femalehousehold_2010_P + HighSchoolHigherP_2010 + No_vehicle_2010 +        OwnerOccupiedUnitP_2010 + RenterOccupiedUnitP_2010 + UnemployementP_2010 + white_collar_occupation_2010 + SNAP_2010_P |ClusterAssignment, data= acs10bin, overall = F)
-
-
-#Population 5 years and over
-#lang_home_EN_notwell: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English!!Speak English less than "very well"
-
-#lang_home_notEN: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English
-
-lang10<-langdist10_wide
-merged10<- merge(merged10,lang10,by = "GEOID")
-
-table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment, data = merged10, overall=F)
+table1(~ Lackplumbing_2010 + medianincome_2010 + BachelorHigherP_2010  +  Education9years_2010 +  Femalehousehold_2010_P + HighSchoolHigherP_2010 + No_vehicle_2010 + OwnerOccupiedUnitP_2010 + RenterOccupiedUnitP_2010 + UnemployementP_2010 + working_class_2010 + SNAP_2010_P +  Hispanic_or_Latino_2010 + NonHispanicBlack_2010 + NonHispanicAsian_2010 + pov_2010 + Crowding_housing_2010 + lang_home_EN_notwell_2010|ClusterAssignment, data= acs10bin, overall = F)
 
 ###COMBINE INTO A SINGLE DATASET LATER
 
@@ -203,7 +198,7 @@ boxplot10<- merged10 %>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = 
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability after ECR algorithm", 
        x= "")
-
+boxplot10
 dattable<- merged10 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
                     `Cluster Assignment` = ClusterAssignment) 
 
@@ -241,7 +236,8 @@ p_15_heatmap1
 #Class probabilities
 stats<-cbind(summary(res_acs15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
-tail(stats, mapK) %>% kable()
+tail(round(stats,4), mapK) %>% kable()
+#check clusters 6, 7 and 9
 ```
 
 #### Age and Race/Ethnicity Distribution of the census tracts by cluster assignment
@@ -251,104 +247,63 @@ tail(stats, mapK) %>% kable()
 classificationprobs_15<-res_acs15$classificationProbabilities.ecr
 # Add cluster classification based on maximum probability 
 maxProb<-apply(classificationprobs_15, 1, max)
-
-maxProb2<-apply(classificationprobs_15, 1, second_highest)
-ClusterAssignment_new <-apply(classificationprobs_15, 1, second_highest_index)
 ClusterAssignment_ecr_temp<-apply(classificationprobs_15,1, highest_index)
 
-classificationprobs_15$ClusterAssignment_ecr<-res_acs15$clusterMembershipPerMethod[,2]
+
+classificationprobs_15$ClusterAssignment<-res_acs15$clusterMembershipPerMethod[,2]
 classificationprobs_15$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
 classificationprobs_15$maxProb<-maxProb
-classificationprobs_15$maxProb2<-maxProb2
-classificationprobs_15$temp<-ClusterAssignment_new
-
-table(classificationprobs_15$ClusterAssignment_ecr_temp, classificationprobs_15$ClusterAssignment_ecr)
-
-fuzzygeoids_15<-classificationprobs_15%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment_ecr) %>% select(GEOID)
-
-
-#Output probabilities
-classificationprobs_15 %>% filter(ClusterAssignment_ecr == 2) %>% select(ClusterAssignment_ecr, temp, maxProb, maxProb2)
-
-#2nd highest probs for cluster2
-classificationprobs_15<-classificationprobs_15 %>% mutate(ClusterAssignment_newd = ifelse(ClusterAssignment_ecr == 2,  temp,ClusterAssignment_ecr), probassign = ifelse( ClusterAssignment_ecr == 2,maxProb2,maxProb))
 
 
 #Prep Data 
+table(classificationprobs_15$ClusterAssignment_ecr_temp, classificationprobs_15$ClusterAssignment)
+
+classificationprobs_15%>% filter(ClusterAssignment != ClusterAssignment_ecr_temp) 
+#only 6 CTs
+
 classificationprobs_15$GEOID<-row.names(censusdata_bin$acs5_2015_bin)
-#Re-label to be 8 clusters 
-classificationprobs_15<-classificationprobs_15 %>% mutate(ClusterAssignment_new = case_when(
-   ClusterAssignment_newd == 1~ 1,
-   ClusterAssignment_newd == 3~ 2,
-   ClusterAssignment_newd == 4~ 3,
-   ClusterAssignment_newd == 5~ 4,
-   ClusterAssignment_newd == 6~ 5,
-   ClusterAssignment_newd == 7~ 6,
-   ClusterAssignment_newd == 8 ~ 7,
-   ClusterAssignment_newd == 9 ~ 8,
-))
+#only 6 CTs
+fuzzygeoids_15<-classificationprobs_15%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
+
+classificationprobs_15$ClusterAssignment<- factor(classificationprobs_15$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
 
-table(classificationprobs_15$ClusterAssignment_ecr)
-table(classificationprobs_15$ClusterAssignment_newd)
-table(classificationprobs_15$ClusterAssignment_new)
+dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment, maxProb)
 
-classificationprobs_15$ClusterAssignment_new<- 
-  factor(classificationprobs_15$ClusterAssignment_new, levels = 1:8, labels = paste0("cluster", 1:8, sep= " "))
-
-
-
-dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment_new, maxProb, maxProb2, probassign)
-
-
-racedist_15<-acs5_2015_wide %>% select(GEOID, Hispanic_or_Latino_2015,NonHispanicWhite_2015, NonHispanicBlack_2015, NonHispanicAsian_2015, NH_two_or_more_races_2015)
 
 #merge age dist + race dist with cluster information-- these are proportions
 merged15<- merge(dat15_clusters, agedist15_wide, by = "GEOID")
-merged15<-merge(merged15, racedist_15, by = "GEOID")
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more + Hispanic_or_Latino_2015 + NonHispanicWhite_2015 + NonHispanicBlack_2015 + NonHispanicAsian_2015+ NH_two_or_more_races_2015  |ClusterAssignment_new, data= merged15, overall = F)
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment, data= merged15, overall = F)
 
 
 #Distrubution of SES variables by cluster
 acs15bin<-censusdata_bin$acs5_2015_bin
 acs15bin$GEOID <- rownames(acs15bin)
 acs15bin<- acs15bin %>% mutate_if(is.numeric, as.factor)
-acs15bin$ClusterAssignment<-classificationprobs_15$ClusterAssignment_new
+acs15bin$ClusterAssignment<-classificationprobs_15$ClusterAssignment
 #acs15bin$ClusterAssignment<- factor(acs15bin$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
 
-table1(~ Two_or_more_rooms_2015_P + Lackplumbing_2015 + medianincome_2015 + BachelorHigherP_2015 + BelowPovertyLineP_2015 +  Education9years_2015 +     Femalehousehold_2015_P + HighSchoolHigherP_2015 + No_vehicle_2015 +        OwnerOccupiedUnitP_2015 + RenterOccupiedUnitP_2015 + UnemployementP_2015 + white_collar_occupation_2015 + SNAP_2015_P |ClusterAssignment, data= acs15bin, overall = F)
-
-
-#Population 5 years and over
-#lang_home_EN_notwell: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English!!Speak English less than "very well"
-
-#lang_home_notEN: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English
-
-lang15<-langdist15_wide
-merged15<- merge(merged15,lang15,by = "GEOID")
-merged15<-merged15 %>% select(-NAME.y) %>%rename(NAME = NAME.x)
-
-table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment_new, data = merged15, overall=F)
+table1(~ Lackplumbing_2015 + medianincome_2015 + BachelorHigherP_2015  +  Education9years_2015 +  Femalehousehold_2015_P + HighSchoolHigherP_2015 + No_vehicle_2015 + OwnerOccupiedUnitP_2015 + RenterOccupiedUnitP_2015 + UnemployementP_2015 + working_class_2015 + SNAP_2015_P +  Hispanic_or_Latino_2015 + NonHispanicBlack_2015 + NonHispanicAsian_2015 + pov_2015 + Crowding_housing_2015 + lang_home_EN_notwell_2015|ClusterAssignment, data= acs15bin, overall = F)
 ```
 
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-# boxplot15<-merged15 %>% ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
+boxplot15<-merged15 %>% ggplot(aes(x = as.factor(ClusterAssignment), y = maxProb, fill = as.factor(ClusterAssignment))) +
+  geom_boxplot() +
+  labs(fill = "Cluster Assignment",
+       y = "Assignment Probability after ECR algorithm",
+       x= "")
+
+# boxplot15_new<-merged15 %>% ggplot(aes(x = ClusterAssignment_new, y = probassign, fill = ClusterAssignment_new)) +
 #   geom_boxplot() +
 #   labs(fill = "Cluster Assignment", 
 #        y = "Assignment Probability after ECR algorithm", 
 #        x= "")
 
-boxplot15_new<-merged15 %>% ggplot(aes(x = ClusterAssignment_new, y = probassign, fill = ClusterAssignment_new)) +
-  geom_boxplot() +
-  labs(fill = "Cluster Assignment", 
-       y = "Assignment Probability after ECR algorithm", 
-       x= "")
-
-dattable15<-merged15 %>% rename(`Average Assignment Probability (ECR Algorithm)` = probassign,
-                    `Cluster Assignment` = ClusterAssignment_new) 
+dattable15<-merged15 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
+                    `Cluster Assignment` = ClusterAssignment) 
 
 table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
                data= dattable15, overall = F)
@@ -398,87 +353,48 @@ tail(stats, mapK) %>% kable()
 classificationprobs_19<-res_acs19$classificationProbabilities.ecr
 # Add cluster classification based on maximum and 2nd highest probability 
 maxProb<-apply(classificationprobs_19, 1, max)
-maxProb2<-apply(classificationprobs_19, 1, second_highest)
-ClusterAssignment_new <-apply(classificationprobs_19, 1, second_highest_index)
 ClusterAssignment_ecr_temp<-apply(classificationprobs_19,1, highest_index)
 
 classificationprobs_19$maxProb<-maxProb
-classificationprobs_19$maxProb2<-maxProb2
-classificationprobs_19$ClusterAssignment_ecr<-res_acs19$clusterMembershipPerMethod[,2]
+classificationprobs_19$ClusterAssignment<-res_acs19$clusterMembershipPerMethod[,2]
 classificationprobs_19$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
-classificationprobs_19$temp<-ClusterAssignment_new 
-
-table(classificationprobs_19$ClusterAssignment_ecr_temp, classificationprobs_19$ClusterAssignment_ecr)
-
-fuzzygeoids_19<-classificationprobs_19%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment_ecr) %>% select(GEOID)
 
 
-#Output probabilities
-classificationprobs_19 %>% filter(ClusterAssignment_ecr %in% c(2,5)) %>% select(ClusterAssignment_ecr, temp, maxProb, maxProb2, ClusterAssignment_ecr_temp)
+table(classificationprobs_19$ClusterAssignment_ecr_temp, classificationprobs_19$ClusterAssignment)
 
-#2nd highest probs for cluster 5
-classificationprobs_19<-classificationprobs_19 %>% mutate(ClusterAssignment_newd= ifelse(ClusterAssignment_ecr %in% c(2,5),  temp,ClusterAssignment_ecr), probassign = ifelse( ClusterAssignment_ecr %in% c(2,5),maxProb2,maxProb))
+#7 cts HT1, 15 HT2
+classificationprobs_19%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) 
 
 
-table(classificationprobs_19$ClusterAssignment_newd)
-#The issue of label switching i was exploring--move the 2 cts on cluster 2
-classificationprobs_19 %>% filter(ClusterAssignment_newd == 2) 
-classificationprobs_19$ClusterAssignment_newd<-ifelse(classificationprobs_19$ClusterAssignment_newd==2, ClusterAssignment_ecr_temp, classificationprobs_19$ClusterAssignment_newd)
 
 #Prep Data 
 classificationprobs_19$GEOID<-row.names(censusdata_bin$acs5_2019_bin)
+fuzzygeoids_19<-classificationprobs_19%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
 
 
-#Re-label to be 8 clusters 
-classificationprobs_19<-classificationprobs_19 %>% mutate(ClusterAssignment_new = case_when(
-   ClusterAssignment_newd == 1~ 1,
-   ClusterAssignment_newd == 3~ 2,
-   ClusterAssignment_newd == 4~ 3,
-   ClusterAssignment_newd == 6~ 4,
-   ClusterAssignment_newd == 7~ 5,
-   ClusterAssignment_newd == 8~ 6,
-))
 
-table(classificationprobs_19$ClusterAssignment_ecr)
-table(classificationprobs_19$ClusterAssignment_newd)
-table(classificationprobs_19$ClusterAssignment_new)
-
-classificationprobs_19$ClusterAssignment_new<- 
-  factor(classificationprobs_19$ClusterAssignment_new, levels = 1:6, labels = paste0("cluster", 1:6, sep= " "))
+classificationprobs_19$ClusterAssignment<- 
+  factor(classificationprobs_19$ClusterAssignment, levels = 1:7, labels = paste0("cluster", 1:7, sep= " "))
 
 
-dat19_clusters<- classificationprobs_19 %>% select(GEOID,ClusterAssignment_new, probassign)
+dat19_clusters<- classificationprobs_19 %>% select(GEOID,ClusterAssignment, maxProb)
 
-
-racedist_19<-acs5_2019_wide %>% select(GEOID, Hispanic_or_Latino_2019,NonHispanicWhite_2019, NonHispanicBlack_2019, NonHispanicAsian_2019, NH_two_or_more_races_2019)
 
 #merge age dist + race dist with cluster information-- these are proportions
 merged19<- merge(dat19_clusters, agedist19_wide, by = "GEOID")
-merged19<-merge(merged19, racedist_19, by = "GEOID")
 
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more + Hispanic_or_Latino_2019 + NonHispanicWhite_2019 + NonHispanicBlack_2019 + NonHispanicAsian_2019 + NH_two_or_more_races_2019  |ClusterAssignment_new, data= merged19, overall = F)
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more|ClusterAssignment, data= merged19, overall = F)
 
 
 #Distrubution of SES variables by cluster
 acs19bin<-censusdata_bin$acs5_2019_bin
 acs19bin$GEOID <- rownames(acs19bin)
 acs19bin<- acs19bin %>% mutate_if(is.numeric, as.factor)
-acs19bin$ClusterAssignment<-merged19$ClusterAssignment_new
+acs19bin$ClusterAssignment<-merged19$ClusterAssignment
 
 
 
 table1(~ Two_or_more_rooms_2019_P + Lackplumbing_2019 + medianincome_2019 + BachelorHigherP_2019 + BelowPovertyLineP_2019 +  Education9years_2019 +     Femalehousehold_2019_P + HighSchoolHigherP_2019 + No_vehicle_2019 +        OwnerOccupiedUnitP_2019 + RenterOccupiedUnitP_2019 + UnemployementP_2019 + white_collar_occupation_2019 + SNAP_2019_P |ClusterAssignment, data= acs19bin, overall = F)
-
-
-#Population 5 years and over
-#lang_home_EN_notwell: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English!!Speak English less than "very well"
-
-#lang_home_notEN: Percent!!LANGUAGE SPOKEN AT HOME!!Language other than English
-
-lang19<-langdist19_wide %>% select(-c(NAME))
-merged19<- merge(merged19,lang19,by = "GEOID")
-
-table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment_new, data = merged19, overall=F)
 
 
 
@@ -487,14 +403,14 @@ table1(~ lang_home_notEN + lang_home_EN_notwell  |ClusterAssignment_new, data = 
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-boxplot19<-merged19%>%  ggplot(aes(x = ClusterAssignment_new, y = probassign, fill = ClusterAssignment_new)) +
+boxplot19<-merged19%>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability after ECR algorithm", 
        x= "")
 
-dattable19<-merged19 %>% rename(`Average Assignment Probability (ECR Algorithm)` = probassign,
-                    `Cluster Assignment` = ClusterAssignment_new) 
+dattable19<-merged19 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
+                    `Cluster Assignment` = ClusterAssignment) 
 
 table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
                data= dattable19, overall = F)
